[gd_scene format=3 uid="uid://yhavhbc6hmeu"]

[ext_resource type="Script" uid="uid://dlkxbpvddb1rw" path="res://addons/godot_ai_chat/scripts/ui/settings_panel.gd" id="1_1lswa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vnbbj"]
bg_color = Color(0.15178573, 0.15178573, 0.15178573, 1)

[node name="SettingsPanel" type="Control" unique_id=801196259]
custom_minimum_size = Vector2(400, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1lswa")

[node name="Panel" type="Panel" parent="." unique_id=62633024]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vnbbj")

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=1696811938]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer" unique_id=2105656231]
layout_mode = 2
theme_override_constants/separation = 20

[node name="APIProvider" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=1040485962]
layout_mode = 2
theme_override_constants/separation = 10

[node name="APIProviderLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/APIProvider" unique_id=202017400]
layout_mode = 2
size_flags_horizontal = 3
text = "API Provider:"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="APIProviderOptions" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/APIProvider" unique_id=1234724774]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 1
selected = 0
item_count = 4
popup/item_0/text = "OpenAI-Compatible"
popup/item_0/id = 0
popup/item_1/text = "Local-AI-Service"
popup/item_1/id = 1
popup/item_2/text = "ZhipuAI"
popup/item_2/id = 2
popup/item_3/text = "Google Gemini"
popup/item_3/id = 3

[node name="BaseUrl" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=242663543]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BaseUrlLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/BaseUrl" unique_id=827480794]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "When using openRouter as API Service Provider, You should input https://openrouter.ai/api, not https://openrouter.ai"
mouse_filter = 1
text = "Base Url:"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="BaseUrlInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/BaseUrl" unique_id=843428671]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "LM Studio: http://127.0.0.1:1234"
context_menu_enabled = false
clear_button_enabled = true

[node name="APIKey" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=1606662049]
layout_mode = 2
theme_override_constants/separation = 10

[node name="APIKeyLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/APIKey" unique_id=54320686]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "When using LM Studio or Ollama, You don't need to provide an API Key."
mouse_filter = 1
text = "API Key(optional):"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="APIKeyInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/APIKey" unique_id=777802144]
layout_mode = 2
size_flags_horizontal = 3
context_menu_enabled = false
clear_button_enabled = true
secret = true

[node name="TavilyAPIKey" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=852785332]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TavilyAPIKeyLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TavilyAPIKey" unique_id=1976447385]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Web Search need API Key to work."
mouse_filter = 1
text = "Tavily API Key(optional):"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="TavilyAPIKeyInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/TavilyAPIKey" unique_id=2132418160]
layout_mode = 2
size_flags_horizontal = 3
context_menu_enabled = false
clear_button_enabled = true
secret = true

[node name="MaxChatTurns" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=1011201739]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MaxChatTurnsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/MaxChatTurns" unique_id=1631490628]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Sets the maximum number of dialogue turns to keep in memory.
A 'turn' is one user request and the complete AI response that follows, even if it involves multiple tool calls."
mouse_filter = 1
text = "Max Chat Turns:"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="MaxChatTurnsValue" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer/MaxChatTurns" unique_id=472753440]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 8.0
alignment = 2

[node name="Timeout" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=783722443]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TimeoutLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Timeout" unique_id=758610451]
layout_mode = 2
size_flags_horizontal = 3
text = "Timeout (sec):"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="TimeoutValue" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer/Timeout" unique_id=1675549865]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1800.0
value = 180.0
alignment = 2

[node name="Temperature" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=2122965445]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TemperatureLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Temperature" unique_id=1119834549]
layout_mode = 2
size_flags_horizontal = 3
text = "Temperature:"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Temperature" unique_id=1152687733]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="TemperatureValue" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/Temperature/HBoxContainer" unique_id=451349427]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.09999999999126884
value = 0.999999999650544

[node name="TemperatureValueLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Temperature/HBoxContainer" unique_id=570670142]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LogLevel" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=1424556989]
layout_mode = 2

[node name="LogLevelLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/LogLevel" unique_id=2117584745]
layout_mode = 2
size_flags_horizontal = 3
text = "Log Level:"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/LogLevel" unique_id=659727771]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 2

[node name="DebugCheckBox" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/LogLevel/HBoxContainer" unique_id=1327993267]
layout_mode = 2
size_flags_horizontal = 3
text = "Debug"

[node name="InfoCheckBox" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/LogLevel/HBoxContainer" unique_id=1307547580]
layout_mode = 2
size_flags_horizontal = 3
text = "Info"

[node name="WarnCheckBox" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/LogLevel/HBoxContainer" unique_id=432740919]
layout_mode = 2
size_flags_horizontal = 3
text = "Warn"

[node name="ErrorCheckBox" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/LogLevel/HBoxContainer" unique_id=1501342115]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Error"

[node name="SystemPromptLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer" unique_id=686488560]
layout_mode = 2
text = "System Prompt:"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="SystemPromptInput" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer" unique_id=1524186122]
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1
scroll_smooth = true

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=1618157163]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="SaveButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/CenterContainer" unique_id=428212706]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.34901962, 0.9490196, 0.4117647, 1)
text = "Save and Close"
